--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+        <!-- Nav bar -->
+        <section class="header">
+            <nav>
+                <a href="index.html"><img src="images/logo.png"></a>
+                <div class="nav-links" id="navLinks">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Log in</a></li>
+                    </ul>
+                </div>
+                </nav>
     
+            <div class="text-box">
+                <h1>lorem</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eveniet, error similique corrupti ipsa deleniti earum nemo facere beatae inventore?</p>
+                <a href="#homebutton" class="button">Search flights</a>
+            </div>
+    
+        </section>
 </body>
 </html>
