--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Nav bar -->
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="images/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -33,7 +33,7 @@
         <div class="text-box">
             <h1>lorem</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eveniet, error similique corrupti ipsa deleniti earum nemo facere beatae inventore?</p>
-            <a href="#homebutton" class="button">Search flights</a>
+            <a href="#" class="button">Search flights</a>
         </div>
 
     </section>
@@ -45,7 +45,7 @@
         <div class="footer-left">
 
             <h3>
-                <a href="index.html"><img src="images/logo.png"></a>
+                <a href="index.html"><img src="images/logo.png" alt=""></a>
             </h3>
 
             <p class="footer-links">
