--- a/about.html
+++ b/about.html
@@ -10,13 +10,16 @@
 <body>
      <section class="about">
         <div class="row">
-        <div class="image">
-            <img src="images/1.jpg">
+        <div class="image-section">
+            <img src="images/3.jpg">
         </div>
         <div class="content">
             <h1>About us</h1>
             <h2>Our Company</h2>
-            <p>According to the Forbes magazine, Phoenix Airline PVT is one of the top 10 airlines management companies in the world.</p>
+            <p>According to the Forbes magazine, Phoenix Airline PVT is one of the top 10 airlines management companies in the world.
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore alias porro repellendus reiciendis beatae officiis nostrum doloremque! Unde,
+               quae dicta. Praesentium temporibus quos neque provident odio esse cumque architecto sit.
+            </p>
         </div>
         </div>
      </section>
