--- a/payment.html
+++ b/payment.html
@@ -38,6 +38,62 @@
       <br>
     </div>
   </div>
+    <footer class="footer-distributed">
+
+    <div class="footer-left">
+
+      <h3>
+        <a href="index.html"><img src="images/logo.png" alt=""></a>
+      </h3>
+
+      <p class="footer-links">
+        <a href="#">Home</a> ·
+        <a href="#">About</a> ·
+        <a href="#">Contact</a> ·
+        <a href="#">Log in</a> ·
+
+      </p>
+
+      <p class="footer-company-name">Phoenix airline &copy; 2022</p>
+    </div>
+
+    <div class="footer-center">
+
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p>1st Street, Colombo, <br> Sri Lanka</p>
+      </div>
+
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>(+94) 11 22 22 500</p>
+      </div>
+
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="mailto:support@company.com">phoenixairline@gmail.com</a></p>
+      </div>
+
+    </div>
+
+    <div class="footer-right">
+
+      <p class="footer-company-about">
+        <span>About the Organization </span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam deserunt harum nemo quibusdam velit quia adipisci corporis a nostrum illum.</p>
+
+      <div class="footer-icons">
+
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+
+      </div>
+    </div>
+  </footer>
+
+
+
 
 
 </body>
