--- a/payment.html
+++ b/payment.html
@@ -31,10 +31,10 @@
         </div>
     </nav>
     <div class="booking-form-box">
-    <p>traveller details</p>
+    <p>card details</p>
     <div class="booking-form">
       <lable>Name</lable>
-      <input type="text" class="form control" placeholder="Name">
+      <input type="text" class="form control">
       <br>
     </div>
   </div>
