--- a/payment.html
+++ b/payment.html
@@ -15,30 +15,43 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" >
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    </head>
-    <body>
+</head>
+<body>
 <!-- Nav bar -->
 <section class="header">
-    <nav>
-        <a href="index.html"><img src="images/logo.png" alt=""></a>
-        <div class="nav-links" id="navLinks">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Log in</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="booking-form-box">
-    <p>card details</p>
+  <nav>
+    <a href="index.html"><img src="images/logo.png" alt=""></a>
+    <div class="nav-links" id="navLinks">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Log in</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="booking-form-box">
+    <P>Card Details</P>
     <div class="booking-form">
-      <lable>Name</lable>
-      <input type="text" class="form control">
+      <lable>Card number</lable>
+      <input type="text" class="form control" >
       <br>
     </div>
+    <div class="booking-form">
+      <lable>CCV</lable>
+      <input type="text" class="form control">
+    </div>
+    <div class="booking-form">
+      <lable>Expire Date</lable>
+      <input type="text" class="form control">
+    </div>
+
+
   </div>
-    <footer class="footer-distributed">
+  <br>
+  <!-- footer area -->
+
+  <footer class="footer-distributed">
 
     <div class="footer-left">
 
@@ -92,9 +105,6 @@
     </div>
   </footer>
 
-
-
-
-
 </body>
 </html>
+
