--- a/payment.html
+++ b/payment.html
@@ -31,6 +31,40 @@
     </div>
   </nav>
   <div class="booking-form-box">
+    <p>Traveller Details</p>
+    <div class="booking-form">
+      <label>Name</label>
+      <input type="text" class="form control">
+      <br>
+        <div class="booking-form">
+          <label>Date of birth</label>
+          <input type="text" class="form control">
+        </div>
+      <div class="booking-form">
+        <label>Passport No.</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+      <div class="booking-form">
+        <label>Expire Date</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+      <div class="booking-form">
+        <label>mobile number</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+      <div class="booking-form">
+        <label>Email address</label>
+        <input type="text" class="form control">
+        <br>
+      </div>
+
+
+
+
+    </div>
     <P>Card Details</P>
     <div class="booking-form">
       <lable>Card number</lable>
@@ -107,4 +141,3 @@
 
 </body>
 </html>
-
