--- a/about.html
+++ b/about.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>About us</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
     <link rel="stylesheet" type="text/css" href="about.css">
 </head>
+
 <body>
+    <!--About section started-->
      <section class="about">
+        <h1>About us</h1>
         <div class="row">
         <div class="image-section">
             <img src="images/3.jpg">
         </div>
         <div class="content">
-            <h1>About us</h1>
             <h2>Our Company</h2>
             <p>According to the Forbes magazine, Phoenix Airline PVT is one of the top 10 airlines management companies in the world.
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore alias porro repellendus reiciendis beatae officiis nostrum doloremque! Unde,
@@ -23,8 +26,36 @@
         </div>
         </div>
      </section>
+    <!--About section ended-->
 
-     <section class=""></section>"
+    <!--Our services section started-->
+     <section class="OurServices">
+     <h1>Our Services</h1>
+     <div class="cards-section">
+        <div>
+            <i class="fas fa-hotel"></i>
+            <h2>Accommodation</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est labore perferendis qui alias, ad magni eius veritatis 
+                distinctio eligendi consequatur totam tempora laboriosam minima architecto deserunt fugiat dolorum corrupti vel?</p>
+        </div>
 
+        <div>   
+             <i class="fas fa-bus"></i>
+             <h2>Transportation</h2>
+             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est labore perferendis qui alias, ad magni eius veritatis 
+                distinctio eligendi consequatur totam tempora laboriosam minima architecto deserunt fugiat dolorum corrupti vel?</p>
+        </div>
+
+        <div>
+            <i class="fas fa-stethoscope"></i>
+            <h2>Medical Facilities</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est labore perferendis qui alias, ad magni eius veritatis 
+                distinctio eligendi consequatur totam tempora laboriosam minima architecto deserunt fugiat dolorum corrupti vel?</p>
+        </div>
+     </div>
+
+     </section>
+     <!--Our services section ended-->
+     
 </body>
 </html>
