--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
 
         <div class="text-box">
-            <h1>lorem</h1>
+            <h1>Explore the World with us!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eveniet, error similique corrupti ipsa deleniti earum nemo facere beatae inventore?</p>
             <a href="#" class="button">Search flights</a>
         </div>
