--- a/about.html
+++ b/about.html
@@ -19,10 +19,9 @@
         </div>
         <div class="content">
             <h2>Our Company</h2>
-            <p>According to the Forbes magazine, Phoenix Airline PVT is one of the top 10 airlines management companies in the world.
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore alias porro repellendus reiciendis beatae officiis nostrum doloremque! Unde,
-               quae dicta. Praesentium temporibus quos neque provident odio esse cumque architecto sit.
-            </p>
+            <p>Phoenix Airlines PVT, we are a leading airline which was established in 1990.
+               We provide a customer friendly, comfortable and cost-effective service to you all.
+               Last year, we were recognized as one of the top 10 airlines in the world, based on a reaserch done by Forbes Magazine.</p>
         </div>
         </div>
      </section>
