--- a/User.html
+++ b/User.html
@@ -7,8 +7,8 @@
     <body>
         <h3>User Registration</h3>
         <br>
-        <form action="User_regi.jsp" method="POST">
-             <table border="1">
+        <form action="UserRegServ" method="POST">
+            
                  <tbody>
                     <tr>
                         <td>First name</td>
