--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <a href="index.html"><img src="images/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Log in</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact us.html">Contact</a></li>
+                    <li><a href="">Log in</a></li>
                 </ul>
             </div>
         </nav>
