--- a/about.html
+++ b/about.html
@@ -34,8 +34,18 @@
         <div>
             <i class="fas fa-hotel"></i>
             <h2>Accommodation</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est labore perferendis qui alias, ad magni eius veritatis 
-                distinctio eligendi consequatur totam tempora laboriosam minima architecto deserunt fugiat dolorum corrupti vel?</p>
+            <p>We provide you luxurious hotels at a low cost. 
+
+
+
+
+
+
+
+
+
+
+            </p>
         </div>
 
         <div>   
