--- a/Admin.html
+++ b/Admin.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="x-ua-compatible" content="IE=edge">
    <meta name="viewpoint" content="width=device, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="Admin.css">
    <title>Admin Panel</title>
 </head>
 <body>
