--- a/payment.html
+++ b/payment.html
@@ -23,9 +23,9 @@
     <a href="index.html"><img src="images/logo.png" alt=""></a>
     <div class="nav-links" id="navLinks">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact us.html"></a></li>
         <li><a href="#">Log in</a></li>
       </ul>
     </div>
@@ -79,6 +79,11 @@
       <lable>Expire Date</lable>
       <input type="text" class="form control">
     </div>
+
+  <br>
+  <div class="input-grp">
+    <button type="button" class="btn btn-primary flight">Confirm</button>
+  </div>
 
 
   </div>
@@ -141,3 +146,4 @@
 
 </body>
 </html>
+
