--- a/payment.html
+++ b/payment.html
@@ -25,7 +25,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="contact us.html"></a></li>
+        <li><a href="contact us.html">Contact us</a></li>
         <li><a href="#">Log in</a></li>
       </ul>
     </div>
