--- a/about.html
+++ b/about.html
@@ -34,32 +34,19 @@
         <div>
             <i class="fas fa-hotel"></i>
             <h2>Accommodation</h2>
-            <p>We provide you luxurious hotels at a low cost. 
-
-
-
-
-
-
-
-
-
-
-            </p>
+            <p>We provide you luxurious hotels with a wide variety of meals and facilities at a low cost. </p>
         </div>
 
         <div>   
              <i class="fas fa-bus"></i>
              <h2>Transportation</h2>
-             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est labore perferendis qui alias, ad magni eius veritatis 
-                distinctio eligendi consequatur totam tempora laboriosam minima architecto deserunt fugiat dolorum corrupti vel?</p>
+             <p>We freely provide transport facilities to the hotel you are looking for.</p>
         </div>
 
         <div>
             <i class="fas fa-stethoscope"></i>
             <h2>Medical Facilities</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est labore perferendis qui alias, ad magni eius veritatis 
-                distinctio eligendi consequatur totam tempora laboriosam minima architecto deserunt fugiat dolorum corrupti vel?</p>
+            <p>We have a well experienced medical team working for 24*7. </p>
         </div>
      </div>
 
