--- a/index.html
+++ b/index.html
@@ -25,14 +25,27 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact us.html">Contact</a></li>
-                    <li><a href="">Log in</a></li>
+                    <li> <div class="dropdown">
+                        <button class="dropbtn">Login
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">User</a>
+                            <a href="#">Staff</a>
+                            <a href="#">Admin</a>
+                        </div>
+                    </div>
+                    </li>
+
                 </ul>
             </div>
         </nav>
 
         <div class="text-box">
             <h1>Explore the World with us!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eveniet, error similique corrupti ipsa deleniti earum nemo facere beatae inventore?</p>
+            <p>Planning an overseas travel is never easy – with so many places to visit and several to explore! Phoenix airline helps you find the best airfares and hotels. Also provides a cheaper air ticket guarantee with a good connection to our customers accompanied by amazing offers to any destination.
+
+            </p>
             <a href="#" class="button">Search flights</a>
         </div>
 
