--- a/User.html
+++ b/User.html
@@ -27,7 +27,7 @@
 
                     <tr>
                         <div class="radiobutton">
-                        <td>Gender</td>
+                        <td>Gender:</td>
                         <td>
                             <input type="radio" name="gender" value="Male">Male
                             <input type="radio" name="gender" value="Female">Female
