--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <div>
             <i class="fas fa-stethoscope"></i>
             <h2>Medical Facilities</h2>
-            <p>We have a well experienced medical team working for 24*7. </p>
+            <p>We have a well experienced medical team working for 24*7. You can get medical advices anytime on board.</p>
         </div>
      </div>
 
