--- a/Customer.html
+++ b/Customer.html
@@ -117,7 +117,7 @@
     <div class="footer-right">
 
         <p class="footer-company-about">
-            <span>About the Organization </span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam deserunt harum nemo quibusdam velit quia adipisci corporis a nostrum illum.</p>
+            <span>About the Organization </span>We can help you find the best airfares and hotels, thanks to our innovative system. We can provide cheaper air tickets guarantee with good connection to our customers accompanied by amazing offers to any destinations.</p>
 
         <div class="footer-icons">
 
