--- a/index.html
+++ b/index.html
@@ -25,17 +25,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact us.html">Contact</a></li>
-                    <li> <div class="dropdown">
-                        <button class="dropbtn">Login
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">User</a>
-                            <a href="#">Staff</a>
-                            <a href="#">Admin</a>
-                        </div>
-                    </div>
-                    </li>
+                    <li><a href="contact us.html">Login</a></li>
+
 
                 </ul>
             </div>
